cleaned gender col rows

--- a/Shark_Attacks.ipynb
+++ b/Shark_Attacks.ipynb
@@ -1338,7 +1338,7 @@
     }
    ],
    "source": [
-    "# Pollyana\n",
+    "# Cleaning \"Sex\" column\n",
     "\n",
     "df[\"Sex\"].unique()"
    ]
@@ -1395,7 +1395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del df[\"Unnamed: 21\"]"
+    "del df[\"Unnamed: 21\"] # deleting empty col"
    ]
   },
   {
@@ -1405,7 +1405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del df[\"Unnamed: 22\"]"
+    "del df[\"Unnamed: 22\"] # deleting empty col"
    ]
   },
   {
@@ -1451,443 +1451,24 @@
     }
    ],
    "source": [
-    "df.drop_duplicates(inplace=True)\n",
+    "df.drop_duplicates(inplace=True) #  deleting empty lines\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "id": "a15d1a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dc8e28e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unnamed: 11</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>Species</th>\n",
-       "      <th>Source</th>\n",
-       "      <th>pdf</th>\n",
-       "      <th>href formula</th>\n",
-       "      <th>href</th>\n",
-       "      <th>Case Number</th>\n",
-       "      <th>Case Number.1</th>\n",
-       "      <th>original order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>08 Dec-2023</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>AUSTRALIA</td>\n",
-       "      <td>Queensland</td>\n",
-       "      <td>1770</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>malle</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td>16h32</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>B. Myatt, GSAF</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>04 Dec-2023</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>BAHAMAS</td>\n",
-       "      <td>New Providence   Isoad</td>\n",
-       "      <td>Sandals Resort</td>\n",
-       "      <td>Paddle boarding</td>\n",
-       "      <td>Lauren Erickson Van Wart</td>\n",
-       "      <td>F</td>\n",
-       "      <td>44</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>11h00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NBC News, 12/4/2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>02 Dec-2023</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>Jalisco</td>\n",
-       "      <td>San Patricio Melaque</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>Maria Fernandez Martinez Jimenez</td>\n",
-       "      <td>F</td>\n",
-       "      <td>26</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>News Channel 21, 12/3.2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>30 Nov-2023</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>AUSTRALIA</td>\n",
-       "      <td>Queensland</td>\n",
-       "      <td>Clack Island</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>Matthew Davitt</td>\n",
-       "      <td>M</td>\n",
-       "      <td>21</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td>11h30</td>\n",
-       "      <td>1.8m bull shark</td>\n",
-       "      <td>ABC Net, 11/30/2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>21 Nov-2023</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>BAHAMAS</td>\n",
-       "      <td>Grand  Bahama Island</td>\n",
-       "      <td>Tiger Beach</td>\n",
-       "      <td>Scuba diving</td>\n",
-       "      <td>female</td>\n",
-       "      <td>F</td>\n",
-       "      <td>47</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>10h30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eye Witness News, 11/22/2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6918</th>\n",
-       "      <td>Before 1903</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>AUSTRALIA</td>\n",
-       "      <td>Western Australia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Pearl diving</td>\n",
-       "      <td>Ahmun</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>H. Taunton; N. Bartlett,  pp. 233-234</td>\n",
-       "      <td>ND-0004-Ahmun.pdf</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>ND.0004</td>\n",
-       "      <td>ND.0004</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6919</th>\n",
-       "      <td>1900-1905</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>Ocracoke Inlet</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>Coast Guard personnel</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>F. Schwartz, p.23; C. Creswell, GSAF</td>\n",
-       "      <td>ND-0003-Ocracoke_1900-1905.pdf</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>ND.0003</td>\n",
-       "      <td>ND.0003</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6920</th>\n",
-       "      <td>1883-1889</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>PANAMA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Panama Bay 8ºN, 79ºW</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Jules Patterson</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The Sun, 10/20/1938</td>\n",
-       "      <td>ND-0002-JulesPatterson.pdf</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>ND.0002</td>\n",
-       "      <td>ND.0002</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6921</th>\n",
-       "      <td>1845-1853</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Unprovoked</td>\n",
-       "      <td>CEYLON (SRI LANKA)</td>\n",
-       "      <td>Eastern Province</td>\n",
-       "      <td>Below the English fort, Trincomalee</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>male</td>\n",
-       "      <td>M</td>\n",
-       "      <td>15</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S.W. Baker</td>\n",
-       "      <td>ND-0001-Ceylon.pdf</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>ND.0001</td>\n",
-       "      <td>ND.0001</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6922</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6923 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Date    Year        Type             Country  \\\n",
-       "0     08 Dec-2023  2023.0  Unprovoked           AUSTRALIA   \n",
-       "1     04 Dec-2023  2023.0  Unprovoked             BAHAMAS   \n",
-       "2     02 Dec-2023  2023.0  Unprovoked              MEXICO   \n",
-       "3     30 Nov-2023  2023.0  Unprovoked           AUSTRALIA   \n",
-       "4     21 Nov-2023  2023.0  Unprovoked             BAHAMAS   \n",
-       "...           ...     ...         ...                 ...   \n",
-       "6918  Before 1903     0.0  Unprovoked           AUSTRALIA   \n",
-       "6919    1900-1905     0.0  Unprovoked                 USA   \n",
-       "6920    1883-1889     0.0  Unprovoked              PANAMA   \n",
-       "6921    1845-1853     0.0  Unprovoked  CEYLON (SRI LANKA)   \n",
-       "6922          NaN     NaN         NaN                 NaN   \n",
-       "\n",
-       "                       State                             Location  \\\n",
-       "0                 Queensland                                1770    \n",
-       "1     New Providence   Isoad                       Sandals Resort   \n",
-       "2                    Jalisco                 San Patricio Melaque   \n",
-       "3                 Queensland                         Clack Island   \n",
-       "4       Grand  Bahama Island                          Tiger Beach   \n",
-       "...                      ...                                  ...   \n",
-       "6918       Western Australia                                  NaN   \n",
-       "6919          North Carolina                       Ocracoke Inlet   \n",
-       "6920                     NaN                 Panama Bay 8ºN, 79ºW   \n",
-       "6921        Eastern Province  Below the English fort, Trincomalee   \n",
-       "6922                     NaN                                  NaN   \n",
-       "\n",
-       "             Activity                              Name      Sex  Age  ...  \\\n",
-       "0            Swimming                             malle  unknown  NaN  ...   \n",
-       "1     Paddle boarding          Lauren Erickson Van Wart        F   44  ...   \n",
-       "2            Swimming  Maria Fernandez Martinez Jimenez        F   26  ...   \n",
-       "3            Swimming                    Matthew Davitt        M   21  ...   \n",
-       "4        Scuba diving                            female        F   47  ...   \n",
-       "...               ...                               ...      ...  ...  ...   \n",
-       "6918     Pearl diving                             Ahmun        M  NaN  ...   \n",
-       "6919         Swimming             Coast Guard personnel        M  NaN  ...   \n",
-       "6920              NaN                   Jules Patterson        M  NaN  ...   \n",
-       "6921         Swimming                              male        M   15  ...   \n",
-       "6922              NaN                               NaN  unknown  NaN  ...   \n",
-       "\n",
-       "     Unnamed: 11     Time         Species   \\\n",
-       "0              N    16h32              NaN   \n",
-       "1              Y    11h00              NaN   \n",
-       "2              Y  Morning              NaN   \n",
-       "3              N    11h30  1.8m bull shark   \n",
-       "4              Y    10h30              NaN   \n",
-       "...          ...      ...              ...   \n",
-       "6918           Y      NaN              NaN   \n",
-       "6919           Y      NaN              NaN   \n",
-       "6920           Y      NaN              NaN   \n",
-       "6921           Y      NaN              NaN   \n",
-       "6922         NaN      NaN              NaN   \n",
-       "\n",
-       "                                     Source                             pdf  \\\n",
-       "0                            B. Myatt, GSAF                             NaN   \n",
-       "1                       NBC News, 12/4/2023                             NaN   \n",
-       "2                News Channel 21, 12/3.2023                             NaN   \n",
-       "3                       ABC Net, 11/30/2023                             NaN   \n",
-       "4              Eye Witness News, 11/22/2023                             NaN   \n",
-       "...                                     ...                             ...   \n",
-       "6918  H. Taunton; N. Bartlett,  pp. 233-234               ND-0004-Ahmun.pdf   \n",
-       "6919   F. Schwartz, p.23; C. Creswell, GSAF  ND-0003-Ocracoke_1900-1905.pdf   \n",
-       "6920                    The Sun, 10/20/1938      ND-0002-JulesPatterson.pdf   \n",
-       "6921                             S.W. Baker              ND-0001-Ceylon.pdf   \n",
-       "6922                                    NaN                             NaN   \n",
-       "\n",
-       "                                           href formula  \\\n",
-       "0                                                   NaN   \n",
-       "1                                                   NaN   \n",
-       "2                                                   NaN   \n",
-       "3                                                   NaN   \n",
-       "4                                                   NaN   \n",
-       "...                                                 ...   \n",
-       "6918  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
-       "6919  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
-       "6920  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
-       "6921  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
-       "6922  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
-       "\n",
-       "                                                   href Case Number  \\\n",
-       "0                                                   NaN         NaN   \n",
-       "1                                                   NaN         NaN   \n",
-       "2                                                   NaN         NaN   \n",
-       "3                                                   NaN         NaN   \n",
-       "4                                                   NaN         NaN   \n",
-       "...                                                 ...         ...   \n",
-       "6918  http://sharkattackfile.net/spreadsheets/pdf_di...     ND.0004   \n",
-       "6919  http://sharkattackfile.net/spreadsheets/pdf_di...     ND.0003   \n",
-       "6920  http://sharkattackfile.net/spreadsheets/pdf_di...     ND.0002   \n",
-       "6921  http://sharkattackfile.net/spreadsheets/pdf_di...     ND.0001   \n",
-       "6922                                                NaN         NaN   \n",
-       "\n",
-       "     Case Number.1 original order  \n",
-       "0              NaN            NaN  \n",
-       "1              NaN            NaN  \n",
-       "2              NaN            NaN  \n",
-       "3              NaN            NaN  \n",
-       "4              NaN            NaN  \n",
-       "...            ...            ...  \n",
-       "6918       ND.0004            5.0  \n",
-       "6919       ND.0003            4.0  \n",
-       "6920       ND.0002            3.0  \n",
-       "6921       ND.0001            2.0  \n",
-       "6922           NaN            NaN  \n",
-       "\n",
-       "[6923 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
